<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mianlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/body"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/topbar" >

        <Button
            android:id="@+id/bodybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/notes_selector"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/notes_title"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/editortitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/notes_edit_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/finishbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:background="@drawable/finish_selector"
            android:gravity="center"
            android:text="@string/notes_finish"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/addnotebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:background="@drawable/add_selector"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:background="@drawable/edgebottom" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="1200dp"
            android:background="@drawable/bodymarginthin"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/datatitle"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#E97F39"
                    android:textSize="15sp" />

                <view
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/note"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    class="com.quku.note.NoteEditor$LinedEditText"
                    android:background="@drawable/bodymarginthin"
                    android:capitalize="sentences"
                    android:fadingEdge="vertical"
                    android:focusableInTouchMode="true"
                    android:gravity="top"
                    android:lineSpacingExtra="90dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="50dp"
                    android:scrollbars="vertical"
                    android:textSize="22sp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/gradbottom"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/arrowleftview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
            </LinearLayout>

            <!--
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/emailview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                </LinearLayout>
            -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/trashview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/arrowrightview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>